tests/behavior/error/null_pointer_arithmetic5.bz
function main()
{
	mut p: ?*i32 = null;
	p += 1;
}
